syntax = "proto3";

package msg;

// Create Request
message CreateRequest {
  string queue = 1;
  string data = 2;
  uint32 retry = 3;
  uint64 delay = 4;
}

// Create Response
message CreateResponse {
  string task_id = 1;
}

// Acknowledge Request
message AckRequest {
  string task_id = 1;
  string queue = 2;
  TaskStatus status = 3;
  string message = 4;
}

// Fetch Request
message FetchRequest {
  string hostname = 1;
  string queue = 2;
  repeated string label = 3;
}

// FetchResponse
message FetchResponse {
  string id = 1;
  string queue = 2;
  string data = 3;
}

// Task status
enum TaskStatus {
  DONE = 0;
  FAILED = 1;
  CANCELED = 2;
}

// Empty response
message Empty {}
